fixtures/frontend/milestone-2/invalid/fanin-invalid-projection/main.aivi
type User = { email: Text }

value joinEmails:Text items:List Text =>
    "joined"

value users:List User = [
    { email: "ada@example.com" }
]

value joinedEmails =
    users
     *|> .email
     <|* .missing
